--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 <br>
 
 			
-<p align="right"> <font color="black" size="1" face="Arial"> <b>80-180</b> <u>Borkowo</u> <i>Żeglarska</i> <strike>101/34</strike> </font> </p> <br>
-<center> <p> <font color="blue" size="4" face="Arial"> Ulubiony aktor: Tom Cruise </font> </p> <br>
-<center> <p> <font color="purple" size="3" face="Verdana"> Ulubiony zespół muzyczny : Imagine Dragons </font> </p> <br>
-<center> <p> <font color="yellow" size="2" face="Courier New"> Data urodzenia : 21 stycznia 2006 </font> </p> <br>
-<p align="left"> <font color="black" size="3" face="Arial"> H <sub> 2 </sub> SO <sub> 4 </sub></font> </p> <br>
+<p align="right"> <font color="orange" size="5" face="Arial"> <b>80-167</b> <u>Gdynia</u> <i>Przywidzka</i> <strike>35/3</strike> </font> </p> <br>
+<center> <p> <font color="red" size="8" face="Arial"> Ulubiony aktor: Samuel L. Jackson </font> </p> <br>
+<center> <p> <font color="purple" size="2" face="Verdana"> Ulubiony zespół muzyczny : Slipknot </font> </p> <br>
+<center> <p> <font color="yellow" size="7" face="Courier New"> Data urodzenia :17 Pażdziernika 2003 </font> </p> <br>
+<p align="left"> <font color="green" size="3" face="Arial"> H <sub> 2 </sub> SO <sub> 4 </sub></font> </p> <br>
 <br>
 <p align="left"> <font color="black" size="3" face="Arial"> x <sup> * </sup> x=x <sup> 2 </sup> </font> </p> <br>
 
