--- a/index.html
+++ b/index.html
@@ -52,29 +52,6 @@
 <br>
 <p align="left"> <font color="black" size="3" face="Arial"> x <sup> * </sup> x=x <sup> 2 </sup> </font> </p> <br>
 
-<h3 ALIGN=center >Dowcip o Uni Europejskiej </h3>
-	<FIELDSET>	
-		 <LEGEND> Nowa służąca </LEGEND> 
-	<IMG SRC="papug.gif" ALIGN=right BORDER=35 WIDTH=125 HEIGHT=101 ALT="grafika1-Borkowski">
-	
-	Hrabina przyjmuje do pracy nową służącą - dziewczynę z dalekiej wsi. Okazuje się, że dziewczyna jest czysta, skromna i pracowita.<br>
-	- Przyjmuję cię. Aha, a czy lubisz kanarki i papugi?<br>
-	- Ja tam, pani hrabino, jadam wszystko...<br>
-		<IMG SRC="papug.gif" ALIGN=left BORDER=13 WIDTH=103 HEIGHT=109 ALT="grafika2-Borkowski">
-	</FIELDSET>
-
-	
-<h4 ALIGN=left >Dowcip o adwokacie </h4>
-	<FIELDSET><br>
-		
-		<LEGEND> Rozprawa sądowa </LEGEND>
-		
-	<IMG SRC="gadanie.gif" ALIGN=right BORDER=13 WIDTH=103 HEIGHT=125 ALT="grafika3-Borkowski">
-Dziadek zabrał Jasia pierwszy raz na rozprawę sądową.<br>
-Jasio widząc po raz pierwszy adwokata ubranego w togę, pyta:<br>
-- A dlaczego ten pan jest ubrany jak kobieta?<br>
-- Bo będzie zaraz długo mówił!<br>
-	<IMG SRC="gadanie.gif" ALIGN=left BORDER=19 WIDTH=109 HEIGHT=103 ALT="grafika4-Borkowski">
 
 	</FIELDSET>
 <A NAME="Środek_pliku"></A>
@@ -89,77 +66,68 @@ Jasio widząc po raz pierwszy adwokata ubranego w togę, pyta:<br>
 	<A HREF="formularz.html"> Tutaj jest link do formularz </A><br>
 	
 	
-<h2 ALIGN=right >Dowcip o teściowej </h2>
-	<FIELDSET>
-		<LEGEND> Problem z pchłami </LEGEND> 
-		
-		<IMG SRC="babcia.gif" ALIGN=right BORDER=16 WIDTH=106 HEIGHT=106 ALT="grafika5-Borkowski">
-Pewien facet zauważył, że jego pies ma pchły.<br>
-Czyta definicję w podręczniku:<br>
-- Pchła - niewielki, bez skrzydłowy, hałaśliwy, wysysający krew pasożyt. Zobacz także: Teściowa.<br>
-
 
 	</FIELDSET><br>
 Nazwisko ucznia&nbsp;Imię ucznia<br>
-Borkowski&nbsp;Marcel<br>
-<!-Borkowski Marcel ZSE 2F-!>
+Grabarczyk&nbsp;Artur<br>
+<!-Artur Grabarczyk  ZSE 2F-!>
 <br><br><br>
 <h1>Poniżej są trzy wyliczenia z różnymi znakami wyliczenia</h1>
 <h1>Ty zaproponuj swoje, związane z informatyką</h1>
 
-<p align="left"> <font color="red" size="3" face="Verdana"> Sprzęt i urządzenia komputerowe </font> </p>
+<p align="left"> <font color="red" size="3" face="Verdana"> peryfera komputerowe </font> </p>
 <UL TYPE=square>
 <LI>Monitor
-<LI>Myszka
-<LI>Klawiatura
+<LI>drukarka
+<LI>Kamera interntowa
 </UL>
 
 <UL TYPE=circle>
-<LI>Procesor
-<LI>Karta graficzna
-<LI>Pamięć komputerowa
+<LI>klawiatura
+<LI>myszka
+<LI>projektor
 </UL>
 
 <UL TYPE=disc>
-<LI> Drukarka
-<LI>Skaner
-<LI>Kamera internetowa
+<LI>mikrofon 
+<LI>klucze zabezpieczające UF2
+<LI>karta dzwiękowa zewnętrzna
 </UL>
 <br><br><br>
 <h2>poniżej są trzy numerowania z różnymi znakami numerowania</h2>
 <h2>Ty zaproponuj swoje, związane z informatyką</h2>	
 	
-<p align="left"> <font color="purple" size="3" face="Verdana"> Rodzaje pamięci </font> 	
+<p align="left"> <font color="purple" size="6" face="Arial"> dystrybutorzy kart graficznych </font> 	
 	
 <OL TYPE=A START=3>
-<LI> Operacyjna
-<LI> Masowa
-<LI> RAM i ROM
-<LI> Trwała 
+<LI> Asus
+<LI> MSI
+<LI> Zotac
+<LI> ASRock 
 </OL>
-<p align="left"> <font color="purple" size="3" face="Verdana"> Rodzaje języków programowania </font>
+<p align="left"> <font color="red" size="9" face="Verdana"> Rodzaje języków programowania </font>
 <OL TYPE=I START=2>
-<LI> Python
 <LI> C++
-<LI> PHP
-<LI> SWIFT
+<LI> SQL
+<LI> C#
+<LI> Java
 </OL>
-<p align="left"> <font color="purple" size="3" face="Verdana"> Komendy w C++ </font>
+<p align="left"> <font color="green" size="8" face="Arial"> komendy w wierszu poleceń (CMD) </font>
 <OL TYPE=Y START=H>
-	<LI>cout
-	<LI>cin
-	<LI>scanf
+	<LI>cls
+	<LI>cd
+	<LI>shutdown
 </OL>
 <br><br><br>
 <h3>poniżej będą trzy poziomy numerowania/wyliczenia z różnymi rodzajami numerowania/wyliczenia</h3>
 <h3>Ty zaproponuj swoje, związane z informatyką</h3>
 
 <OL> 
-	<LI> Klawisze na numpadzie
+	<LI> znaki specjalne
 	<OL type=A> 
-		<LI> Klawisz +
-		<LI> Klawisz . DEL
-		<LI> Klaiwsz  0 INS
+		<LI> shift + 1 daje nam !
+		<LI> shift + 2 daje nam @
+		<LI> shift + 5 daje nam %
 	</OL>
 	<LI> Klawisze funkcyjne
 	<OL type=A> 
