--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Grabarczyk&nbsp;Artur<br>
 
 <p align="left"> <font color="red" size="3" face="Verdana"> peryfera komputerowe </font> </p>
 <UL TYPE=square>
-<LI>Monitor
+<LI align="right">Monitor
 <LI>drukarka
 <LI>Kamera interntowa
 </UL>
