--- a/index.html
+++ b/index.html
@@ -129,21 +129,15 @@ Grabarczyk&nbsp;Artur<br>
 		<LI> shift + 2 daje nam @
 		<LI> shift + 5 daje nam %
 	</OL>
-	<LI> Klawisze funkcyjne
+	<LI> rodzaje pamięci 
 	<OL type=A> 
-	<LI> F1
-	<LI> F2
-	<LI> F3
-	<LI> F4
-	<LI> F5
+	<LI> RAM
+	<LI> ROM
+	<LI> Operacyjna
+	<LI> Masowa
+	<LI> Wewnętrzna
 	</OL>
-	<LI> Klawisze normalne
-	<OL type=a>
-		<LI> Klawisz A
-		<LI> Klawisz B
-		<LI> Klawisz C
-</OL>
-</OL>
+	
 </OL>
 
 <A NAME="Koniec_pliku"></A>
