--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+1<!DOCTYPE html>
 	<html lang="pl-PL">
 	<html>
 		<head>
@@ -77,21 +77,21 @@ Grabarczyk&nbsp;Artur<br>
 
 <p align="left"> <font color="red" size="3" face="Verdana"> peryfera komputerowe </font> </p>
 <UL TYPE=square>
-<LI align="right">Monitor
-<LI>drukarka
-<LI>Kamera interntowa
+<LI align="left">Monitor
+<LI align="left">drukarka
+<LI align="left">Kamera interntowa
 </UL>
 
 <UL TYPE=circle>
-<LI>klawiatura
-<LI>myszka
-<LI>projektor
+<LI align="left">klawiatura
+<LI align="left">myszka
+<LI align="left">projektor
 </UL>
 
 <UL TYPE=disc>
-<LI>mikrofon 
-<LI>klucze zabezpieczające UF2
-<LI>karta dzwiękowa zewnętrzna
+<LI align="left">mikrofon 
+<LI align="left">klucze zabezpieczające UF2
+<LI align="left">karta dzwiękowa zewnętrzna
 </UL>
 <br><br><br>
 <h2>poniżej są trzy numerowania z różnymi znakami numerowania</h2>
@@ -100,23 +100,23 @@ Grabarczyk&nbsp;Artur<br>
 <p align="left"> <font color="purple" size="6" face="Arial"> dystrybutorzy kart graficznych </font> 	
 	
 <OL TYPE=A START=3>
-<LI> Asus
-<LI> MSI
-<LI> Zotac
-<LI> ASRock 
+<LI align="left"> Asus
+<LI align="left"> MSI
+<LI align="left"> Zotac
+<LI align="left"> ASRock 
 </OL>
 <p align="left"> <font color="red" size="9" face="Verdana"> Rodzaje języków programowania </font>
 <OL TYPE=I START=2>
-<LI> C++
-<LI> SQL
-<LI> C#
-<LI> Java
+<LI align="left"> C++
+<LI align="left"> SQL
+<LI align="left"> C#
+<LI align="left"> Java
 </OL>
 <p align="left"> <font color="green" size="8" face="Arial"> komendy w wierszu poleceń (CMD) </font>
 <OL TYPE=Y START=H>
-	<LI>cls
-	<LI>cd
-	<LI>shutdown
+<LI align="left">cls
+<LI align="left">cd
+<LI align="left">shutdown
 </OL>
 <br><br><br>
 <h3>poniżej będą trzy poziomy numerowania/wyliczenia z różnymi rodzajami numerowania/wyliczenia</h3>
@@ -125,17 +125,17 @@ Grabarczyk&nbsp;Artur<br>
 <OL> 
 	<LI> znaki specjalne
 	<OL type=A> 
-		<LI> shift + 1 daje nam !
-		<LI> shift + 2 daje nam @
-		<LI> shift + 5 daje nam %
+<LI align="left"> shift + 1 daje nam !
+<LI align="left"> shift + 2 daje nam @
+<LI align="left"> shift + 5 daje nam %
 	</OL>
-	<LI> rodzaje pamięci 
+	<LI > rodzaje pamięci 
 	<OL type=A> 
-	<LI> RAM
-	<LI> ROM
-	<LI> Operacyjna
-	<LI> Masowa
-	<LI> Wewnętrzna
+<LI align="left"> RAM
+<LI align="left"> ROM
+<LI align="left"> Operacyjna
+<LI align="left"> Masowa
+<LI align="left"> Wewnętrzna
 	</OL>
 	
 </OL>
