--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@ Grabarczyk&nbsp;Artur<br>
 <h3>Ty zaproponuj swoje, związane z informatyką</h3>
 
 <OL> 
-	<LI> znaki specjalne
+<LI align="left"> znaki specjalne
 	<OL type=A> 
 <LI align="left"> shift + 1 daje nam !
 <LI align="left"> shift + 2 daje nam @
 <LI align="left"> shift + 5 daje nam %
 	</OL>
-	<LI > rodzaje pamięci 
+<LI align="left"> rodzaje pamięci 
 	<OL type=A> 
 <LI align="left"> RAM
 <LI align="left"> ROM
