--- a/poczta.html
+++ b/poczta.html
@@ -7,7 +7,7 @@
 		</head>
 		<body>
 	Tutaj będzie poczta<br>
-	<A href ="mailto:grabarczykartur18@gmail.com"><img src="poczta.jpg" border=0 width=70 height=50>poczta do mnie</A>
+	<A href ="mailto:grabarczykartur18@gmail.com"><img src="gmail.png" border=0 width=70 height=50>poczta do mnie</A>
 			
 		<A HREF="index.html"> Wróć </A>
 		</body>
