--- a/poczta.html
+++ b/poczta.html
@@ -7,7 +7,7 @@
 		</head>
 		<body>
 	<br><br><br><br>	
-<A href ="mailto:grabarczykartur18@gmail.com"><img src="gmail.png" border=0 width=100 height=200>poczta do mnie</A>
+<A href ="mailto:grabarczykartur18@gmail.com"><img src="gmail.png" border=0 width=10000 height=200000><br>poczta do mnie</A>
 			<br><br><br><br>
 					<A HREF="index.html"> Wróć </A>
 		</body>
