--- a/index.html
+++ b/index.html
@@ -140,6 +140,17 @@ Grabarczyk&nbsp;Artur<br>
 	
 </OL>
 
+<h2 ALIGN=right >Dowcip o informatyku </h2>
+	<FIELDSET>
+		<LEGEND> Adres </LEGEND> 
+
+	
+<IMG SRC="ścieżka_do_pliku" ALIGN=right BORDER=28 WIDTH=118 HEIGHT=118 ALT=„grafika1-Grabarczyk”>
+Wsiada informatyk do taksówki. Taksiarz pyta:<br>
+- Dokąd jedziemy?<br>
+-192.168.4.1<br>
+	
+
 <A NAME="Koniec_pliku"></A>
 	<A HREF="poczta.html"> Tutaj jest link do poczty </A><br>
 	
