--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Grabarczyk&nbsp;Artur<br>
 		<LEGEND> Adres </LEGEND> 
 
 	
-<IMG SRC="ścieżka_do_pliku" ALIGN=right BORDER=28 WIDTH=118 HEIGHT=118 ALT=„grafika1-Grabarczyk”>
+<IMG SRC="ip.png" ALIGN=right BORDER=28 WIDTH=118 HEIGHT=118 ALT=„grafika1-Grabarczyk”>
 Wsiada informatyk do taksówki. Taksiarz pyta:<br>
 - Dokąd jedziemy?<br>
 -192.168.4.1<br>
