--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@ Grabarczyk&nbsp;Artur<br>
 Wsiada informatyk do taksówki. Taksiarz pyta:<br>
 - Dokąd jedziemy?<br>
 -192.168.4.1<br>
+
+<IMG SRC="rozdzielczość.png" ALIGN=left BORDER=17 WIDTH=107 HEIGHT=107 ALT=„grafika2-Grabarczyk”>
+- Jakie są idealne wymiary kobiety informatyka?<br>
+- 1024 x 768.<br>
 	
 
 <A NAME="Koniec_pliku"></A>
