--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@ Grabarczyk&nbsp;Artur<br>
 
 	
 <IMG SRC="ip.png" ALIGN=right BORDER=28 WIDTH=118 HEIGHT=118 ALT=„grafika1-Grabarczyk”>
-Wsiada informatyk do taksówki. Taksiarz pyta:<br>
+<p align="right">Wsiada informatyk do taksówki. Taksiarz pyta:<br>
 - Dokąd jedziemy?<br>
--192.168.4.1<br>
+-192.168.4.1<br><p>
 		
 <br><br><br><br><br><br>
 		
 <IMG SRC="rozdzielczość.png" ALIGN=left BORDER=17 WIDTH=107 HEIGHT=107 ALT=„grafika2-Grabarczyk”>
-- Jakie są idealne wymiary kobiety informatyka?<br>
-- 1024 x 768.<br>
+<p align="left">Jakie są idealne wymiary kobiety informatyka?<br>
+1024 x 768.<br>
 	
 
 <A NAME="Koniec_pliku"></A>
