--- a/index.html
+++ b/index.html
@@ -155,7 +155,19 @@ Grabarczyk&nbsp;Artur<br>
 <IMG SRC="rozdzielczość.png" ALIGN=left BORDER=17 WIDTH=107 HEIGHT=107 ALT=„grafika2-Grabarczyk”>
 <p align="left">Jakie są idealne wymiary kobiety informatyka?<br>
 1024 x 768.<br>
-	
+
+<br><br><br><br><br><br>
+
+<IMG SRC="rozdzielczość.png" ALIGN=right BORDER=17 WIDTH=107 HEIGHT=107 ALT=„grafika3-Grabarczyk”>
+<p align="right">Przychodzi koleś do kafejki internetowej i pyta:
+-są jakieś wolne komputery?
+-Nie, mamy same szybkie.
+
+<br><br><br><br><br><br>
+
+<IMG SRC="rozdzielczość.png" ALIGN=left BORDER=27 WIDTH=110 HEIGHT=107 ALT=„grafika4-Grabarczyk”>
+<p align="left">Ludzie! Oderwijcie się od tego komputera, tam też jest świat, ptaszki ćwierkające, piwo, dziewczyny...
+Gdzie? Za firewall`em?	
 
 <A NAME="Koniec_pliku"></A>
 	<A HREF="poczta.html"> Tutaj jest link do poczty </A><br>
