--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@ Grabarczyk&nbsp;Artur<br>
 
 <br><br><br><br><br><br>
 
-<IMG SRC="rozdzielczość.png" ALIGN=right BORDER=17 WIDTH=107 HEIGHT=107 ALT=„grafika3-Grabarczyk”>
+<IMG SRC="komp.jpg" ALIGN=right BORDER=17 WIDTH=107 HEIGHT=107 ALT=„grafika3-Grabarczyk”>
 <p align="right">Przychodzi koleś do kafejki internetowej i pyta:
 -są jakieś wolne komputery?
 -Nie, mamy same szybkie.
 
 <br><br><br><br><br><br>
 
-<IMG SRC="rozdzielczość.png" ALIGN=left BORDER=27 WIDTH=110 HEIGHT=107 ALT=„grafika4-Grabarczyk”>
+<IMG SRC="firewall.png" ALIGN=left BORDER=27 WIDTH=110 HEIGHT=107 ALT=„grafika4-Grabarczyk”>
 <p align="left">Ludzie! Oderwijcie się od tego komputera, tam też jest świat, ptaszki ćwierkające, piwo, dziewczyny...
 Gdzie? Za firewall`em?	
 
