--- a/index.html
+++ b/index.html
@@ -159,15 +159,16 @@ Grabarczyk&nbsp;Artur<br>
 <br><br><br><br><br><br>
 
 <IMG SRC="komp.jpg" ALIGN=right BORDER=17 WIDTH=107 HEIGHT=107 ALT=„grafika3-Grabarczyk”>
-<p align="right">Przychodzi koleś do kafejki internetowej i pyta:
--są jakieś wolne komputery?
--Nie, mamy same szybkie.
+<p align="right">Przychodzi koleś do kafejki internetowej i pyta:<br>
+-są jakieś wolne komputery?<br>
+-Nie, mamy same szybkie.<br>
 
 <br><br><br><br><br><br>
 
 <IMG SRC="firewall.png" ALIGN=left BORDER=27 WIDTH=110 HEIGHT=107 ALT=„grafika4-Grabarczyk”>
-<p align="left">Ludzie! Oderwijcie się od tego komputera, tam też jest świat, ptaszki ćwierkające, piwo, dziewczyny...
-Gdzie? Za firewall`em?	
+<p align="left">Ludzie! Oderwijcie się od tego komputera,<br>
+tam też jest świat, ptaszki ćwierkające, piwo, dziewczyny...<br>
+Gdzie? Za firewall`em?<br>
 
 <A NAME="Koniec_pliku"></A>
 	<A HREF="poczta.html"> Tutaj jest link do poczty </A><br>
