--- a/index.html
+++ b/index.html
@@ -170,6 +170,13 @@ Grabarczyk&nbsp;Artur<br>
 tam też jest świat, ptaszki ćwierkające, piwo, dziewczyny...<br>
 Gdzie? Za firewall`em?<br>
 
+	
+<br><br><br><br><br><br>
+
+<IMG SRC="drukara.jpg" ALIGN=right BORDER=15 WIDTH=105 HEIGHT=105 ALT=„grafika5-Grabarczyk”>
+Co to jest? Zaczyna się na D, kończy na A i zużywa dużo papieru?<p>
+- Drukarka.<p>	
+	
 <A NAME="Koniec_pliku"></A>
 	<A HREF="poczta.html"> Tutaj jest link do poczty </A><br>
 	
