--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ Gdzie? Za firewall`em?<br>
 <br><br><br><br><br><br>
 
 <IMG SRC="drukara.jpg" ALIGN=right BORDER=15 WIDTH=105 HEIGHT=105 ALT=„grafika5-Grabarczyk”>
-<p align="right">Co to jest? Zaczyna się na D, kończy na A i zużywa dużo papieru?<p>
-- Drukarka.<p>	
+<p align="right">Co to jest? Zaczyna się na D, kończy na A i zużywa dużo papieru?<br>
+<p align="right"- Drukarka.<br>	
 	
 	<br><br><br><br><br><br>
 	
