--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Grabarczyk&nbsp;Artur<br>
 
 <h2 ALIGN=right >Dowcip o informatyku </h2>
 	<FIELDSET>
-		<LEGEND> Adres </LEGEND> 
+		<LEGEND>Dowcip o informatyku</LEGEND> 
 
 	
 <IMG SRC="ip.png" ALIGN=right BORDER=28 WIDTH=118 HEIGHT=118 ALT=„grafika1-Grabarczyk”>
@@ -175,7 +175,7 @@ Gdzie? Za firewall`em?<br>
 
 <IMG SRC="drukara.jpg" ALIGN=right BORDER=15 WIDTH=105 HEIGHT=105 ALT=„grafika5-Grabarczyk”>
 <p align="right">Co to jest? Zaczyna się na D, kończy na A i zużywa dużo papieru?<br>
-<p align="right"- Drukarka.<br>	
+<p align="right">- Drukarka.<br>	
 	
 	<br><br><br><br><br><br>
 	
