--- a/index.html
+++ b/index.html
@@ -180,17 +180,17 @@ Gdzie? Za firewall`em?<br>
 	<br><br><br><br><br><br>
 	
 <A NAME="Koniec_pliku"></A>
-	<A align="center" HREF="poczta.html"> Tutaj jest link do poczty </A><br>
+	<p align="center" ><A HREF="poczta.html"> Tutaj jest link do poczty </A><br>
 	
-	<A align="center" HREF="plik.html"> Tutaj jest link do pliku </A><br>
+	<p align="center" ><A align="center" HREF="plik.html"> Tutaj jest link do pliku </A><br>
 			
-	<A align="center"  HREF="#Początek_pliku"> Kliknij tutaj aby skoczyć na początek pliku </A><br>
+	<p align="center" ><A align="center"  HREF="#Początek_pliku"> Kliknij tutaj aby skoczyć na początek pliku </A><br>
 	
-	<A align="center"   HREF="#Środek_pliku"> Kliknij tutaj aby skoczyć na środek pliku </A><br>	
+	<p align="center" ><A align="center"   HREF="#Środek_pliku"> Kliknij tutaj aby skoczyć na środek pliku </A><br>	
 	
-	<A align="center"  HREF="tabela.html"> Tutaj jest link do tabeli </A><br>
+	<p align="center" ><A align="center"  HREF="tabela.html"> Tutaj jest link do tabeli </A><br>
 	
-	<A align="center"  HREF="formularz.html"> Tutaj jest link do formularz </A><br>
+	<p align="center" ><A align="center"  HREF="formularz.html"> Tutaj jest link do formularz </A><br>
 
 
 
