--- a/tabela.html
+++ b/tabela.html
@@ -3,26 +3,10 @@
 	<html>
 		<head>
 			<meta charset="utf-8">
-			<title> tabela Grabarczyk </title>
+			<title> Tabela Grabarczyk</title>
 		</head>
 		<body>
-	  <table border="1">
-        <tr>
-            <th> Nagłówek 1 </th>
-            <th> Nagłówek 2 </th>
-            <th> Nagłówek 3 </th>
-        </tr>
-        <tr>
-            <td> Wiersz 1, Komórka 1 </td>
-            <td> Wiersz 1, Komórka 2 </td>
-            <td> Wiersz 1, Komórka 3 </td>
-        </tr>
-        <tr>
-            <td> Wiersz 2, Komórka 1 </td>
-            <td> Wiersz 2, Komórka 2 </td>
-            <td> Wiersz 2, Komórka 3 </td>
-        </tr>
-    </table><br>	
+	Tutaj będzie tabela<br>	
 		<A HREF="index.html"> Wróć </A>
 		</body>
 </html>
