--- a/plik.html
+++ b/plik.html
@@ -6,7 +6,7 @@
 <title> plik Borkowski</title>
 </head>
 <body>
-<A href ="plik.zip">p&nbsp;o&nbsp;b&nbsp;i&nbsp;e&nbsp;ż&nbsp; aby pobrać</A><br>
+<A href ="plik.zip">p&nbsp;o&nbsp;b&nbsp;i&nbsp;e&nbsp;r&nbsp;z&nbsp; aby pobrać</A><br>
 <A HREF="index.html"> Wróć </A>
 </body>
 </html>
