--- a/tabela.html
+++ b/tabela.html
@@ -39,6 +39,27 @@
 <td>Komórka 14</td>
 <td>Komórka 15</td>
 </tr>
+<tr>
+<td>Komórka 16</td>
+<td>Komórka 17</td>
+<td>Komórka 18</td>
+<td>Komórka 19</td>
+<td>Komórka 20</td>
+</tr>
+<tr>
+<td>Komórka 21</td>
+<td>Komórka 22</td>
+<td>Komórka 23</td>
+<td>Komórka 24</td>
+<td>Komórka 25</td>
+</tr>
+<tr>
+<td>Komórka 26</td>
+<td>Komórka 27</td>
+<td>Komórka 28</td>
+<td>Komórka 29</td>
+<td>Komórka 30</td>
+</tr>
 </tbody>
 </table>
 		<A HREF="index.html"> Wróć </A>
