--- a/tabela.html
+++ b/tabela.html
@@ -19,11 +19,11 @@
 </thead>
 <tbody>
 <tr>
-<td>Komórka 1</td>
-<td>Komórka 2</td>
-<td>Komórka 3</td>
-<td>Komórka 4</td>
-<td>Komórka 5</td>
+<td>Model Procesora</td>
+<td>Częstotliwość taktowania</td>
+<td>Seria procesora</td>
+<td>Zintegrowana karta graficzna</td>
+<td>ilość pamięci podręcznej</td>
 </tr>
 <tr>
 <td>Komórka 6</td>
