--- a/tabela.html
+++ b/tabela.html
@@ -26,11 +26,11 @@
 <td>ilość pamięci podręcznej</td>
 </tr>
 <tr>
-<td>Komórka 6</td>
-<td>Komórka 7</td>
-<td>Komórka 8</td>
-<td>Komórka 9</td>
-<td>Komórka 10</td>
+<td>Intel Core i5-12400F</td>
+<td>2.5GHz</td>
+<td>Intel Core i5-12XXX</td>
+<td>NIE</td>
+<td>18MB</td>
 </tr>
 <tr>
 <td>Komórka 11</td>
