--- a/tabela.html
+++ b/tabela.html
@@ -33,18 +33,18 @@
 <td>18MB</td>
 </tr>
 <tr>
-<td>Komórka 11</td>
-<td>Komórka 12</td>
-<td>Komórka 13</td>
-<td>Komórka 14</td>
-<td>Komórka 15</td>
+<td>Intel Core i5-11400F</td>
+<td>2.6GHz</td>
+<td>Intel Core 15-11XXX</td>
+<td>NIE</td>
+<td>18MB</td>
 </tr>
 <tr>
-<td>Komórka 16</td>
-<td>Komórka 17</td>
-<td>Komórka 18</td>
-<td>Komórka 19</td>
-<td>Komórka 20</td>
+<td>Intel Core i5-13600KF</td>
+<td>3.5GHz</td>
+<td>Intel Core i5-13XXX</td>
+<td>TAK</td>
+<td>24MB</td>
 </tr>
 <tr>
 <td>Komórka 21</td>
