--- a/tabela.html
+++ b/tabela.html
@@ -47,18 +47,18 @@
 <td>24MB</td>
 </tr>
 <tr>
-<td>Komórka 21</td>
-<td>Komórka 22</td>
-<td>Komórka 23</td>
-<td>Komórka 24</td>
-<td>Komórka 25</td>
+<td>Intel Core 17-13700K</td>
+<td>3.4GHz</td>
+<td>Intel Core i7-13XXX</td>
+<td>TAK</td>
+<td>24MB</td>
 </tr>
 <tr>
-<td>Komórka 26</td>
-<td>Komórka 27</td>
-<td>Komórka 28</td>
-<td>Komórka 29</td>
-<td>Komórka 30</td>
+<td>AMD Ryzen 5-5600X</td>
+<td>3.7GHz</td>
+<td>seria 5000</td>
+<td>NIE</td>
+<td>32MB</td>
 </tr>
 </tbody>
 </table>
