--- a/tabela.html
+++ b/tabela.html
@@ -6,7 +6,7 @@
 			<title> Tabela_Grabarczyk</title>
 		</head>
 		<body>
-	<table border=2>
+	<table style="border:6px solid red;border-collapse: collapse;">
 <caption>Tytuł tabela HTML</caption>
 <thead>
 <tr>
