--- a/tabela.html
+++ b/tabela.html
@@ -9,7 +9,7 @@
 	<table style="border:6px solid red;border-collapse: collapse;">
 <caption>Tytuł tabela HTML</caption>
 <thead>
-<tr>
+<tr style="border:3px solid black;border-collapse: collapse;">
 <th>Kolumna 1</th>
 <th>Kolumna 2</th>
 <th>Kolumna 3</th>
@@ -18,21 +18,21 @@
 </tr>
 </thead>
 <tbody>
-<tr>
+<tr style="font-family: Arial;font-size: 22px;">
 <td>Model Procesora</td>
 <td>Częstotliwość taktowania</td>
 <td>Seria procesora</td>
 <td>Zintegrowana karta graficzna</td>
 <td>ilość pamięci podręcznej</td>
 </tr>
-<tr>
-<td>Intel Core i5-12400F</td>
+<tr style="color: green;font-weight: bold;">
+<td style="border:3px solid black;border-collapse: collapse;">Intel Core i5-12400F</td>
 <td>2.5GHz</td>
 <td>Intel Core i5-12XXX</td>
 <td>NIE</td>
 <td>18MB</td>
 </tr>
-<tr>
+<tr style="background-color: #66CCFF;">>
 <td>Intel Core i5-11400F</td>
 <td>2.6GHz</td>
 <td>Intel Core 15-11XXX</td>
