--- a/tabela.html
+++ b/tabela.html
@@ -6,10 +6,10 @@
 			<title> Tabela_Grabarczyk</title>
 		</head>
 		<body>
-	<table style="border:6px solid red;border-collapse: collapse;">
+	<table style="border:6px solid black;border-collapse: collapse;">
 <caption>Tytuł tabela HTML</caption>
 <thead>
-<tr style="border:3px solid black;border-collapse: collapse;">
+<tr style="border:3px solid red;border-collapse: collapse;"
 <th>Kolumna 1</th>
 <th>Kolumna 2</th>
 <th>Kolumna 3</th>
@@ -18,7 +18,7 @@
 </tr>
 </thead>
 <tbody>
-<tr style="font-family: Arial;font-size: 22px;">
+<tr style="font-family: green;font-size: 22px;">
 <td>Model Procesora</td>
 <td>Częstotliwość taktowania</td>
 <td>Seria procesora</td>
