--- a/tabela.html
+++ b/tabela.html
@@ -9,7 +9,7 @@
 	<table style="border:6px solid black;border-collapse: collapse;">
 <caption>Tytuł tabela HTML</caption>
 <thead>
-<tr style="border:3px solid red;border-collapse: collapse;"
+<tr style="border:3px solid red;border-collapse: collapse;">
 <th>Kolumna 1</th>
 <th>Kolumna 2</th>
 <th>Kolumna 3</th>
@@ -25,14 +25,14 @@
 <td>Zintegrowana karta graficzna</td>
 <td>ilość pamięci podręcznej</td>
 </tr>
-<tr style="color: green;font-weight: bold;">
+<tr style="color: black;font-weight: bold;">
 <td style="border:3px solid black;border-collapse: collapse;">Intel Core i5-12400F</td>
 <td>2.5GHz</td>
 <td>Intel Core i5-12XXX</td>
 <td>NIE</td>
 <td>18MB</td>
 </tr>
-<tr style="background-color: #66CCFF;">>
+<tr style="background-color: #00CC33;">>
 <td>Intel Core i5-11400F</td>
 <td>2.6GHz</td>
 <td>Intel Core 15-11XXX</td>
