--- a/tabela.html
+++ b/tabela.html
@@ -25,7 +25,7 @@
 <td>Zintegrowana karta graficzna</td>
 <td>ilość pamięci podręcznej</td>
 </tr>
-<tr style="color: black;font-weight: bold;"  style="background-color: #663399;">
+<tr style= "background-color: #663399;" "color: black;font-weight: bold;">
 <td style="border:3px solid black;border-collapse: collapse;">Intel Core i5-12400F</td>
 <td>2.5GHz</td>
 <td>Intel Core i5-12XXX</td>
