--- a/tabela.html
+++ b/tabela.html
@@ -18,14 +18,14 @@
 </tr>
 </thead>
 <tbody>
-<tr style="font-family: green;font-size: 22px;">
+<tr style=  "background-color: #663399;" "font-family: green;font-size: 22px;">
 <td>Model Procesora</td>
 <td>Częstotliwość taktowania</td>
 <td>Seria procesora</td>
 <td>Zintegrowana karta graficzna</td>
 <td>ilość pamięci podręcznej</td>
 </tr>
-<tr style= "background-color: #663399;" "color: black;font-weight: bold;">
+<tr style= "background-color: #FFFF00;" "color: black;font-weight: bold;">
 <td style="border:3px solid black;border-collapse: collapse;">Intel Core i5-12400F</td>
 <td>2.5GHz</td>
 <td>Intel Core i5-12XXX</td>
