--- a/tabela.html
+++ b/tabela.html
@@ -29,36 +29,36 @@
 <td style="border:3px solid black;border-collapse: collapse;">Intel Core i5-12400F</td>
 <td>2.5GHz</td>
 <td>Intel Core i5-12XXX</td>
-<td>NIE</td>
-<td>18MB</td>
+<td><p align="center">NIE</p></td>
+<td><p align="center">18MB</p></td>
 </tr>
 <tr style="background-color: #00CC33;">>
 <td>Intel Core i5-11400F</td>
 <td>2.6GHz</td>
 <td>Intel Core 15-11XXX</td>
-<td>NIE</td>
-<td>18MB</td>
+<td><p align="center">NIE</p></td>
+<td><p align="center">18MB</p></td>
 </tr>
 <tr>
 <td>Intel Core i5-13600KF</td>
 <td>3.5GHz</td>
 <td>Intel Core i5-13XXX</td>
-<td>TAK</td>
-<td>24MB</td>
+<td><p align="center">TAK</p></td>
+<td><p align="center">24MB</p></td>
 </tr>
 <tr>
 <td>Intel Core 17-13700K</td>
 <td>3.4GHz</td>
 <td>Intel Core i7-13XXX</td>
-<td>TAK</td>
-<td>24MB</td>
+<td><p align="center">TAK</p></td>
+<td><p align="center">24MB</p></td>
 </tr>
 <tr>
 <td>AMD Ryzen 5-5600X</td>
 <td>3.7GHz</td>
 <td>seria 5000</td>
-<td>NIE</td>
-<td>32MB</td>
+<td><p align="center">NIE</p></td>
+<td><p align="center">32MB</p></td>
 </tr>
 </tbody>
 </table>
