--- a/tabela.html
+++ b/tabela.html
@@ -19,11 +19,11 @@
 </thead>
 <tbody>
 <tr style=  "background-color: #663399;" "font-family: green;font-size: 22px;">
-<td>Model Procesora</td>
-<td>Częstotliwość taktowania</td>
-<td>Seria procesora</td>
-<td>Zintegrowana karta graficzna</td>
-<td>ilość pamięci podręcznej</td>
+<td><p align="center">Model Procesora</p></td>
+<td><p align="center">Częstotliwość taktowania</p></td>
+<td><p align="center">Seria procesora</p></td>
+<td><p align="center">Zintegrowana karta graficzna</p></td>
+<td><p align="center">ilość pamięci podręcznej</p></td>
 </tr>
 <tr style= "background-color: #FFFF00;" "color: black;font-weight: bold;">
 <td style="border:3px solid black;border-collapse: collapse;">Intel Core i5-12400F</td>
