--- a/tabela.html
+++ b/tabela.html
@@ -10,55 +10,55 @@
 <caption>Tytuł tabela HTML</caption>
 <thead>
 <tr style="border:3px solid red;border-collapse: collapse;">
-<th>Kolumna 1</th>
-<th>Kolumna 2</th>
-<th>Kolumna 3</th>
-<th>Kolumna 4</th>
-<th>Kolumna 5</th>
+<th style="border:3px solid red;border-collapse: collapse;">Kolumna 1</th>
+<th style="border:3px solid red;border-collapse: collapse;">Kolumna 2</th>
+<th style="border:3px solid red;border-collapse: collapse;">Kolumna 3</th>
+<th style="border:3px solid red;border-collapse: collapse;">Kolumna 4</th>
+<th style="border:3px solid red;border-collapse: collapse;">Kolumna 5</th>
 </tr>
 </thead>
 <tbody>
-<tr style=  "background-color: #663399;" "font-family: green;font-size: 22px;">
-<td><p align="center">Model Procesora</p></td>
-<td><p align="center">Częstotliwość taktowania</p></td>
-<td><p align="center">Seria procesora</p></td>
-<td><p align="center">Zintegrowana karta graficzna</p></td>
-<td><p align="center">ilość pamięci podręcznej</p></td>
+<tr style= "border:3px solid red;border-collapse: collapse;" "font-family: green;font-size: 22px;">
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">Model Procesora</p></td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">Częstotliwość taktowania</p></td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">Seria procesora</p></td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">Zintegrowana karta graficzna</p></td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">ilość pamięci podręcznej</p></td>
 </tr>
 <tr style= "background-color: #FFFF00;" "color: black;font-weight: bold;">
 <td style="border:3px solid black;border-collapse: collapse;">Intel Core i5-12400F</td>
-<td>><p align="center">2.5GHz</p></td>
-<td>Intel Core i5-12XXX</td>
-<td><p align="center">NIE</p></td>
-<td><p align="center">18MB</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">><p align="center">2.5GHz</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">Intel Core i5-12XXX</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">NIE</p></td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">18MB</p></td>
 </tr>
 <tr style="background-color: #00CC33;">>
-<td>Intel Core i5-11400F</td>
-<td><p align="center">2.6GHz</p></td>
-<td>Intel Core 15-11XXX</td>
-<td><p align="center">NIE</p></td>
-<td><p align="center">18MB</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">Intel Core i5-11400F</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">2.6GHz</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">Intel Core 15-11XXX</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">NIE</p></td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">18MB</p></td>
 </tr>
 <tr>
-<td>Intel Core i5-13600KF</td>
-<td><p align="center">3.5GHz</p></td>
-<td>Intel Core i5-13XXX</td>
-<td><p align="center">TAK</p></td>
-<td><p align="center">24MB</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">Intel Core i5-13600KF</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">3.5GHz</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">Intel Core i5-13XXX</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">TAK</p></td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">24MB</p></td>
 </tr>
 <tr>
-<td>Intel Core 17-13700K</td>
-<td><p align="center">3.4GHz</p></td>
-<td>Intel Core i7-13XXX</td>
-<td><p align="center">TAK</p></td>
-<td><p align="center">24MB</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">Intel Core 17-13700K</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">3.4GHz</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">Intel Core i7-13XXX</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">TAK</p></td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">24MB</p></td>
 </tr>
 <tr>
-<td>AMD Ryzen 5-5600X</td>
-<td><p align="center">3.7GHz</p></td>
-<td>seria 5000</td>
-<td><p align="center">NIE</p></td>
-<td><p align="center">32MB</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">AMD Ryzen 5-5600X</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">3.7GHz</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">seria 5000</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">NIE</p></td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">32MB</p></td>
 </tr>
 </tbody>
 </table>
