--- a/tabela.html
+++ b/tabela.html
@@ -9,7 +9,7 @@
 	<table style="border:6px solid black;border-collapse: collapse;">
 <caption>Tytuł tabela HTML</caption>
 <thead>
-<tr style="border:3px solid red;border-collapse: collapse;">
+<tr style="background-color: #FFFF00;">
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 1</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 2</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 3</th>
