--- a/tabela.html
+++ b/tabela.html
@@ -9,7 +9,7 @@
 	<table style="border:6px solid black;border-collapse: collapse;">
 <caption>Tytuł tabela HTML</caption>
 <thead>
-<tr style="background-color: #FFFF00;">
+<tr style="background-color: #CC9900;">
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 1</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 2</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 3</th>
@@ -18,7 +18,7 @@
 </tr>
 </thead>
 <tbody>
-<tr style= "border:3px solid red;border-collapse: collapse;" "font-family: green;font-size: 22px;">
+<tr style= "background-color: #6633FF;" "color: black;font-weight: bold;">
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">Model Procesora</p></td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">Częstotliwość taktowania</p></td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">Seria procesora</p></td>
