--- a/tabela.html
+++ b/tabela.html
@@ -32,14 +32,14 @@
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">NIE</p></td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">18MB</p></td>
 </tr>
-<tr style="background-color: #00CC33;">>
+<tr style="background-color: #00CC33;">
 <td style="border:3px solid red;border-collapse: collapse;">Intel Core i5-11400F</td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">2.6GHz</p></td>
 <td style="border:3px solid red;border-collapse: collapse;">Intel Core 15-11XXX</td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">NIE</p></td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">18MB</p></td>
 </tr>
-<tr>
+<tr style="background-color: #FF0000;">
 <td style="border:3px solid red;border-collapse: collapse;">Intel Core i5-13600KF</td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">3.5GHz</p></td>
 <td style="border:3px solid red;border-collapse: collapse;">Intel Core i5-13XXX</td>
