--- a/formularz.html
+++ b/formularz.html
@@ -6,7 +6,7 @@
 <title> ZADANIE FORMULARZ </title>
 </head>
 <body bgcolor="#87CEFA">
-<center><h1> Formularz o.................zaproponowany przez nauczyciela</h1></center>
+<center><h1> JAK OCENIASZ NASZĄ RADIOSTACJĘ</h1></center>
 <form enctype="text/plain" action="mailto:mkryniew@wp.pl" subject="formularz_dane" method="Post">
 <TABLE>
 <TR height="100">
@@ -22,7 +22,14 @@
 <b>Pseudonim artystyczny</b>&nbsp &nbsp<input name="login" size="22"><nobr> <br>
 </TD>
 <TD width="300" >komórka2 </TD>
-<TD width="500">komórka3 </TD>
+<TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
+<br><br>
+<input type="checkbox" name="ciastko" value="k"> BEZA
+<br><br>
+<input type="checkbox" name="ciastko" value="m"> SERNIK
+<br><br>
+<input type="checkbox" name="ciastko" value="inna"> INNE
+<br><br><br> </TD>
 </TR>
 <TR height="200">
 <TD>jeden </TD>
