--- a/formularz.html
+++ b/formularz.html
@@ -10,18 +10,48 @@
 <form enctype="text/plain" action="mailto:mkryniew@wp.pl" subject="formularz_dane" method="Post">
 <TABLE>
 <TR height="100">
-<TD width="500">
-<b>Imię</b> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<input name="imie" size="22">
-<br><br>
-<b>Drugie imię</b>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-&nbsp &nbsp &nbsp &nbsp <input name="drugie" size="22">
-<br><br>
-<b>Nazwisko </b> &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <input name="nazwisko" size="22">
-<br><br>
-<b>Pseudonim artystyczny</b>&nbsp &nbsp<input name="login" size="22"><nobr> <br>
 </TD>
 <TD width="300" >komórka2 </TD>
+<TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
+<br><br>
+<input type="checkbox" name="ciastko" value="k"> BEZA
+<br><br>
+<input type="checkbox" name="ciastko" value="m"> SERNIK
+<br><br>
+<input type="checkbox" name="ciastko" value="inna"> INNE
+<br><br><br> </TD>
+<br><br>
+<</TD>
+<TD width="300" >komórka2 </TD>
+<TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
+<br><br>
+<input type="checkbox" name="ciastko" value="k"> BEZA
+<br><br>
+<input type="checkbox" name="ciastko" value="m"> SERNIK
+<br><br>
+<input type="checkbox" name="ciastko" value="inna"> INNE
+<br><br><br> </TD>
+</TD>
+<TD width="300" >komórka2 </TD>
+<TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
+<br><br>
+<input type="checkbox" name="ciastko" value="k"> BEZA
+<br><br>
+<input type="checkbox" name="ciastko" value="m"> SERNIK
+<br><br>
+<input type="checkbox" name="ciastko" value="inna"> INNE
+<br><br><br> </TD>
+</TD>
+<TD width="300" ></TD>
+<TD width="300" >komórka2 </TD>
+<TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
+<br><br>
+<input type="checkbox" name="ciastko" value="k"> BEZA
+<br><br>
+<input type="checkbox" name="ciastko" value="m"> SERNIK
+<br><br>
+<input type="checkbox" name="ciastko" value="inna"> INNE
+<br><br><br> </TD></TD>
 <TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
 <br><br>
 <input type="checkbox" name="ciastko" value="k"> BEZA
