--- a/formularz.html
+++ b/formularz.html
@@ -7,11 +7,10 @@
 </head>
 <body bgcolor="#87CEFA">
 <center><h1> JAK OCENIASZ NASZĄ RADIOSTACJĘ</h1></center>
-<form enctype="text/plain" action="mailto:mkryniew@wp.pl" subject="formularz_dane" method="Post">
+<form enctype="text/plain" action="mailto:grabarczykartur18@gmail.com" subject="formularz_dane" method="Post">
 <TABLE>
 <TR height="100">
 </TD>
-<TD width="300" >komórka2 </TD>
 <TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
 <br><br>
 <input type="checkbox" name="ciastko" value="k"> BEZA
@@ -21,8 +20,7 @@
 <input type="checkbox" name="ciastko" value="inna"> INNE
 <br><br><br> </TD>
 <br><br>
-<</TD>
-<TD width="300" >komórka2 </TD>
+</TD>
 <TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
 <br><br>
 <input type="checkbox" name="ciastko" value="k"> BEZA
@@ -32,7 +30,6 @@
 <input type="checkbox" name="ciastko" value="inna"> INNE
 <br><br><br> </TD>
 </TD>
-<TD width="300" >komórka2 </TD>
 <TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
 <br><br>
 <input type="checkbox" name="ciastko" value="k"> BEZA
@@ -42,8 +39,6 @@
 <input type="checkbox" name="ciastko" value="inna"> INNE
 <br><br><br> </TD>
 </TD>
-<TD width="300" ></TD>
-<TD width="300" >komórka2 </TD>
 <TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
 <br><br>
 <input type="checkbox" name="ciastko" value="k"> BEZA
@@ -60,17 +55,6 @@
 <br><br>
 <input type="checkbox" name="ciastko" value="inna"> INNE
 <br><br><br> </TD>
-</TR>
-<TR height="200">
-<TD>jeden </TD>
-<TD> A </TD>
-<TD> pierwszy </TD>
-</TR>
-<TR height="400">
-<TD>dwa </TD>
-<TD> B </TD>
-<TD> drugi </TD>
-</TR>
 </TABLE>
 </form>
 		<A HREF="index.html"> Wróć </A>
