--- a/formularz.html
+++ b/formularz.html
@@ -11,13 +11,17 @@
 <TABLE>
 <TR height="100">
 </TD>
-<TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
+<TD width="500"><TD width="500">Oceń jakość muzyki w radio.
 <br><br>
-<input type="checkbox" name="ciastko" value="k"> BEZA
+<input type="checkbox" name="ocena" value="k"> 1
 <br><br>
-<input type="checkbox" name="ciastko" value="m"> SERNIK
+<input type="checkbox" name="ocena" value="m"> 2
 <br><br>
-<input type="checkbox" name="ciastko" value="inna"> INNE
+<input type="checkbox" name="ocena" value="inna"> 3
+<br><br>
+<input type="checkbox" name="ocena" value="inna"> 4
+<br><br>
+<input type="checkbox" name="ocena" value="inna"> 5
 <br><br><br> </TD>
 <br><br>
 </TD>
