--- a/formularz.html
+++ b/formularz.html
@@ -11,7 +11,7 @@
 <TABLE>
 <TR height="100">
 </TD>
-<center><TD width="500"><TD width="500">Oceń jakość muzyki w radio.
+<TD width="500"><TD width="500"><center>Oceń jakość muzyki w radio.
 <br><br>
 <input type="checkbox" name="ocena" value="k"> 1
 <br><br>
