--- a/formularz.html
+++ b/formularz.html
@@ -25,18 +25,22 @@
 <br><br><br> </TD>
 <br><br>
 </TD>
-<TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
+<TD width="500"><TD width="500">Oceń różnorodonść muzyki w radio. 
 <br><br>
-<input type="checkbox" name="ciastko" value="k"> BEZA
+<input type="checkbox" name="muzyka" value="k"> 1
 <br><br>
-<input type="checkbox" name="ciastko" value="m"> SERNIK
+<input type="checkbox" name="muzyka" value="m"> 2
 <br><br>
-<input type="checkbox" name="ciastko" value="inna"> INNE
+<input type="checkbox" name="muzyka" value="inna"> 3
+<br><br>
+<input type="checkbox" name="muzyka" value="inna"> 4
+<br><br>
+<input type="checkbox" name="muzyka" value="inna"> 5
 <br><br><br> </TD>
 </TD>
-<TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
+<TD width="500"><TD width="500">Czy osoba prowadząca seris inforacyjny...
 <br><br>
-<input type="checkbox" name="ciastko" value="k"> BEZA
+Jest uprzejma<input type="checkbox" name="osoba" value="k"> tak | <input type="checkbox" name="osoba" value="k"> nie 
 <br><br>
 <input type="checkbox" name="ciastko" value="m"> SERNIK
 <br><br>
