--- a/formularz.html
+++ b/formularz.html
@@ -40,12 +40,12 @@
 </TD>
 <TD width="500"><TD width="500">Czy osoba prowadząca seris inforacyjny...
 <br><br>
-Jest uprzejma<input type="checkbox" name="osoba" value="k"> tak | <input type="checkbox" name="osoba" value="k"> nie 
+Jest uprzejma tak<input type="checkbox" name="osoba" value="k">  | <input type="checkbox" name="osoba" value="k"> nie 
 <br><br>
-<input type="checkbox" name="ciastko" value="m"> SERNIK
+Podała wiarygodne informacje? tak<input type="checkbox" name="osoba" value="k">  | <input type="checkbox" name="osoba" value="k"> nie 
 <br><br>
-<input type="checkbox" name="ciastko" value="inna"> INNE
-<br><br><br> </TD>
+Mówiła wyraźnie? tak<input type="checkbox" name="osoba" value="k">  | <input type="checkbox" name="osoba" value="k"> nie 
+<br><br> </TD>
 </TD>
 <TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
 <br><br>
