--- a/formularz.html
+++ b/formularz.html
@@ -47,14 +47,19 @@ Podała wiarygodne informacje? tak<input type="checkbox" name="osoba" value="k">
 Mówiła wyraźnie? tak<input type="checkbox" name="osoba" value="k">  | <input type="checkbox" name="osoba" value="k"> nie 
 <br><br> </TD>
 </TD>
-<TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
+<TD width="500"><TD width="500">Oceń ilość reklam w radio
 <br><br>
-<input type="checkbox" name="ciastko" value="k"> BEZA
+<input type="checkbox" name="ilość" value="k"> 1
 <br><br>
-<input type="checkbox" name="ciastko" value="m"> SERNIK
+<input type="checkbox" name="ilość" value="k"> 2
 <br><br>
-<input type="checkbox" name="ciastko" value="inna"> INNE
-<br><br><br> </TD></TD>
+<input type="checkbox" name="ilość" value="k"> 3
+<br><br> 
+<input type="checkbox" name="ilość" value="k"> 4
+<br><br>
+<input type="checkbox" name="ilość" value="k"> 5
+<br><br>
+</TD></TD>
 <TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
 <br><br>
 <input type="checkbox" name="ciastko" value="k"> BEZA
