--- a/tabela.html
+++ b/tabela.html
@@ -26,7 +26,7 @@
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">ilość pamięci podręcznej</p></td>
 </tr>
 <tr style= "background-color: #FFFF00;" "color: black;font-weight: bold;">
-<td style="border:3px solid black;border-collapse: collapse;">Intel Core i5-12400F</td>
+<td style="border:3px solid red;border-collapse: collapse;">Intel Core i5-12400F</td>
 <td style="border:3px solid red;border-collapse: collapse;">><p align="center">2.5GHz</p></td>
 <td style="border:3px solid red;border-collapse: collapse;">Intel Core i5-12XXX</td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">NIE</p></td>
