--- a/tabela.html
+++ b/tabela.html
@@ -46,7 +46,7 @@
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">TAK</p></td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">24MB</p></td>
 </tr>
-<tr style="background-color: ff8413;">
+<tr style="background-color: #ff8413;">
 <td style="border:3px solid red;border-collapse: collapse;">Intel Core 17-13700K</td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">3.4GHz</p></td>
 <td style="border:3px solid red;border-collapse: collapse;">Intel Core i7-13XXX</td>
