--- a/tabela.html
+++ b/tabela.html
@@ -53,7 +53,7 @@
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">TAK</p></td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">24MB</p></td>
 </tr>
-<tr>
+<tr style="background-color: #000000;">
 <td style="border:3px solid red;border-collapse: collapse;">AMD Ryzen 5-5600X</td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">3.7GHz</p></td>
 <td style="border:3px solid red;border-collapse: collapse;">seria 5000</td>
