--- a/tabela.html
+++ b/tabela.html
@@ -53,12 +53,12 @@
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">TAK</p></td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">24MB</p></td>
 </tr>
-<tr style="background-color: #000000;">
-<td style="border:3px solid gold;border-collapse: collapse;">AMD Ryzen 5-5600X</td>
-<td style="border:3px solid gold;border-collapse: collapse;"><p align="center">3.7GHz</p></td>
-<td style="border:3px solid gold;border-collapse: collapse;">seria 5000</td>
-<td style="border:3px solid gold;border-collapse: collapse;"><p align="center">NIE</p></td>
-<td style="border:3px solid gold;border-collapse: collapse;"><p align="center">32MB</p></td>
+<tr style="color: green; background-color: #000000;">
+<td style="border:3px solid red;border-collapse: collapse;">AMD Ryzen 5-5600X</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">3.7GHz</p></td>
+<td style="border:3px solid red;border-collapse: collapse;">seria 5000</td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">NIE</p></td>
+<td style="border:3px solid red;border-collapse: collapse;"><p align="center">32MB</p></td>
 </tr>
 </tbody>
 </table>
