--- a/tabela.html
+++ b/tabela.html
@@ -7,15 +7,15 @@
 		</head>
 		<body>
 	<table style="border:6px solid black;border-collapse: collapse;">
-<caption>Tytuł tabela HTML</caption>
-<thead>
-<tr style="background-color: #CC9900;">
+<caption><tr style="background-color: #CC9900;">
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 1</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 2</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 3</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 4</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 5</th>
-</tr>
+</tr></caption>
+<thead>
+
 </thead>
 <tbody>
 <tr style= "background-color: #6633FF;" "color: black;font-weight: bold;">
