--- a/tabela.html
+++ b/tabela.html
@@ -8,6 +8,7 @@
 		<body>
 	<table style="border:6px solid black;border-collapse: collapse;">
 <caption><tr style="background-color: #CC9900;">
+<td COLSPNA=5 ALGIN=CENTER> </td>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 1</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 2</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 3</th>
