--- a/tabela.html
+++ b/tabela.html
@@ -8,7 +8,7 @@
 		<body>
 	<table style="border:6px solid black;border-collapse: collapse;">
 <caption><tr style="background-color: #CC9900;">
-<td COLSPAN=5 ALGIN=CENTER> DANE PROCESORÓW-ARTUR GRABARCZYK 2Fg1</td>
+<td COLSPAN=5 ALIGN=CENTER> DANE PROCESORÓW-ARTUR GRABARCZYK 2Fg1</td>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 1</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 2</th>
 <th style="border:3px solid red;border-collapse: collapse;">Kolumna 3</th>
