--- a/tabela.html
+++ b/tabela.html
@@ -9,12 +9,7 @@
 	<table style="border:6px solid black;border-collapse: collapse;">
 <caption><tr style="background-color: #CC9900;">
 <td COLSPAN=5 ALIGN=CENTER> DANE PROCESORÓW-ARTUR GRABARCZYK 2Fg1</td>
-<th style="border:3px solid red;border-collapse: collapse;">Kolumna 1</th>
-<th style="border:3px solid red;border-collapse: collapse;">Kolumna 2</th>
-<th style="border:3px solid red;border-collapse: collapse;">Kolumna 3</th>
-<th style="border:3px solid red;border-collapse: collapse;">Kolumna 4</th>
-<th style="border:3px solid red;border-collapse: collapse;">Kolumna 5</th>
-</tr></caption>
+</caption>
 <thead>
 
 </thead>
