--- a/tabela.html
+++ b/tabela.html
@@ -56,13 +56,9 @@
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">NIE</p></td>
 <td style="border:3px solid red;border-collapse: collapse;"><p align="center">32MB</p></td>
 </tr>
-<tr style="background-color: #CC9900;">
-<th style="border:3px solid red;border-collapse: collapse;">Kolumna 1</th>
-<th style="border:3px solid red;border-collapse: collapse;">Kolumna 2</th>
-<th style="border:3px solid red;border-collapse: collapse;">Kolumna 3</th>
-<th style="border:3px solid red;border-collapse: collapse;">Kolumna 4</th>
-<th style="border:3px solid red;border-collapse: collapse;">Kolumna 5</th>
-</tr>
+<caption><tr style="background-color: #CC9900;">
+<td COLSPAN=5 ALIGN=CENTER>DANE PROCESORÓW</td>
+</caption>
 </tbody>
 </table>
 		<A HREF="index.html"> Wróć </A>
