--- a/formularz.html
+++ b/formularz.html
@@ -1,75 +1,105 @@
 <!DOCTYPE html>
-<html lang="pl-PL">
-<html>
+<html lang="pl">
 <head>
-<meta charset="utf-8">
-<title> ZADANIE FORMULARZ </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ocena Radiostacji</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+
+        label {
+            display: block;
+            margin-top: 10px;
+        }
+    </style>
 </head>
-<body bgcolor="#87CEFA">
-<center><h1> JAK OCENIASZ NASZĄ RADIOSTACJĘ</h1></center>
-<form enctype="text/plain" action="mailto:grabarczykartur18@gmail.com" subject="formularz_dane" method="Post">
-<TABLE>
-<TR height="100">
-</TD>
-<TD width="500"><TD width="500"><center>Oceń jakość muzyki w radio.
-<br><br>
-<input type="checkbox" name="ocena" value="k"> 1
-<br><br>
-<input type="checkbox" name="ocena" value="m"> 2
-<br><br>
-<input type="checkbox" name="ocena" value="inna"> 3
-<br><br>
-<input type="checkbox" name="ocena" value="inna"> 4
-<br><br>
-<input type="checkbox" name="ocena" value="inna"> 5
-<br><br><br> </TD>
-<br><br>
-</TD>
-<TD width="500"><TD width="500">Oceń różnorodonść muzyki w radio. 
-<br><br>
-<input type="checkbox" name="muzyka" value="k"> 1
-<br><br>
-<input type="checkbox" name="muzyka" value="m"> 2
-<br><br>
-<input type="checkbox" name="muzyka" value="inna"> 3
-<br><br>
-<input type="checkbox" name="muzyka" value="inna"> 4
-<br><br>
-<input type="checkbox" name="muzyka" value="inna"> 5
-<br><br><br> </TD>
-</TD>
-<TD width="500"><TD width="500">Czy osoba prowadząca seris inforacyjny...
-<br><br>
-Jest uprzejma tak<input type="checkbox" name="osoba" value="k">  | <input type="checkbox" name="osoba" value="k"> nie 
-<br><br>
-Podała wiarygodne informacje? tak<input type="checkbox" name="osoba" value="k">  | <input type="checkbox" name="osoba" value="k"> nie 
-<br><br>
-Mówiła wyraźnie? tak<input type="checkbox" name="osoba" value="k">  | <input type="checkbox" name="osoba" value="k"> nie 
-<br><br> </TD>
-</TD>
-<TD width="500"><TD width="500">Oceń ilość reklam w radio
-<br><br>
-<input type="checkbox" name="ilość" value="k"> 1
-<br><br>
-<input type="checkbox" name="ilość" value="k"> 2
-<br><br>
-<input type="checkbox" name="ilość" value="k"> 3
-<br><br> 
-<input type="checkbox" name="ilość" value="k"> 4
-<br><br>
-<input type="checkbox" name="ilość" value="k"> 5
-<br><br>
-</TD></TD>
-<TD width="500"><TD width="500">Jaka jest Twoja ulubione ciastko?
-<br><br>
-<input type="checkbox" name="ciastko" value="k"> BEZA
-<br><br>
-<input type="checkbox" name="ciastko" value="m"> SERNIK
-<br><br>
-<input type="checkbox" name="ciastko" value="inna"> INNE
-<br><br><br> </TD>
-</TABLE>
+<body>
+
+<form action="#" method="post">
+    <h2>JAK OCENIASZ NASZĄ RADIOSTACJĘ</h2>
+
+    <h3>Oceń jakość muzyki w radio</h3>
+    <label> 02<input type="radio" name="quality" value="02"></label>
+    <label> 03<input type="radio" name="quality" value="03"></label>
+    <label> 04<input type="radio" name="quality" value="04"></label>
+    <label> 05<input type="radio" name="quality" value="05"></label>
+    <label>Bardzo dobra</label>
+
+    <h3>Oceń różnorodność muzyki w radio</h3>
+    <label>01<input type="radio" name="diversity" value="01"></label>
+    <label>02<input type="radio" name="diversity" value="02"></label>
+    <label>03<input type="radio" name="diversity" value="03"></label>
+    <label>04<input type="radio" name="diversity" value="04"></label>
+    <label>05<input type="radio" name="diversity" value="05"></label>
+    <label>Monotonna</label>
+
+    <h3>Czy osoba prowadząca serwis informacyjny...</h3>
+    <label>Bardzo rodnorodna<input type="radio" name="host_diversity" value="yes"></label>
+    <label>Nie jest uprzejma<input type="radio" name="host_diversity" value="no"></label>
+
+    <h3>Jest uprzejma?</h3>
+    <label>Tak<input type="radio" name="polite" value="yes"></label>
+    <label>Nie<input type="radio" name="polite" value="no"></label>
+
+    <h3>Podawała wiarygodne informacje?</h3>
+    <label>Tak<input type="radio" name="reliable_info" value="yes"></label>
+    <label>Nie<input type="radio" name="reliable_info" value="no"></label>
+
+    <h3>Mówiła wyraźnie?</h3>
+    <label>Tak<input type="radio" name="clear_speech" value="yes"></label>
+    <label>Nie<input type="radio" name="clear_speech" value="no"></label>
+
+    <h3>Ocenili reklamy w radio</h3>
+    <label>Bardzo mało<input type="radio" name="ads_amount" value="01"></label>
+    <label>02<input type="radio" name="ads_amount" value="02"></label>
+    <label>03<input type="radio" name="ads_amount" value="03"></label>
+    <label>04<input type="radio" name="ads_amount" value="04"></label>
+    <label>05<input type="radio" name="ads_amount" value="05"></label>
+    <label>Bardzo dużo</label>
+
+    <h3>Oceń jakość reklam</h3>
+    <label>Bardzo za<input type="radio" name="ads_quality" value="01"></label>
+    <label>02<input type="radio" name="ads_quality" value="02"></label>
+    <label>01<input type="radio" name="ads_quality" value="03"></label>
+    <label>04<input type="radio" name="ads_quality" value="04"></label>
+    <label>05<input type="radio" name="ads_quality" value="05"></label>
+    <label>Wyśmienita</label>
+
+    <h3>Czy poleciłbyś naszą radiostację swoim znajomym?</h3>
+    <label>Zdecydowanie nie<input type="radio" name="recommendation" value="01"></label>
+    <label>02<input type="radio" name="recommendation" value="02"></label>
+    <label>03<input type="radio" name="recommendation" value="03"></label>
+    <label>04<input type="radio" name="recommendation" value="04"></label>
+    <label>05<input type="radio" name="recommendation" value="05"></label>
+    <label>Zdecydowanie tak</label>
+
+    <h3>Oceń swoje ogólne wrażenia z naszą radiostacją</h3>
+    <label>01<input type="radio" name="overall_experience" value="01"></label>
+    <label>02<input type="radio" name="overall_experience" value="02"></label>
+    <label>03<input type="radio" name="overall_experience" value="03"></label>
+    <label>04<input type="radio" name="overall_experience" value="04"></label>
+    <label>05<input type="radio" name="overall_experience" value="05"></label>
+    <label>Bardzo złe</label>
+
+    <h3>Jak często słuchasz naszych audycji?</h3>
+    <label>Raz na 2 tygodnie<input type="radio" name="listening_frequency" value="02"></label>
+    <label>1-2 razy miesięcznie<input type="radio" name="listening_frequency" value="03"></label>
+    <label>Raz na rok<input type="radio" name="listening_frequency" value="04"></label>
+    <label>Rzadziej<input type="radio" name="listening_frequency" value="05"></label>
+
+    <h3>Ile osób zazwyczaj słuchasz naszych audycji?</h3>
+    <label>01<input type="radio" name="audience_size" value="01"></label>
+    <label>02<input type="radio" name="audience_size" value="02"></label>
+    <label>03<input type="radio" name="audience_size" value="03"></label>
+    <label>04<input type="radio" name="audience_size" value="04"></label>
+    <label>05<input type="radio" name="audience_size" value="05"></label>
+
+    <br>
+    <input type="submit" value="Wyślij">
 </form>
-		<A HREF="index.html"> Wróć </A>
-		</body>
+
+</body>
 </html>
