--- a/formularz.html
+++ b/formularz.html
@@ -19,9 +19,9 @@
 <body>
 
 <form action="#" method="post">
-    <h2>JAK OCENIASZ NASZĄ RADIOSTACJĘ</h2>
+    <h2><p align="center">JAK OCENIASZ NASZĄ RADIOSTACJĘ</h2></p>
 
-    <h3>Oceń jakość muzyki w radio</h3>
+    <h3><>Oceń jakość muzyki w radio</h3>
     <label> 02<input type="radio" name="quality" value="02"></label>
     <label> 03<input type="radio" name="quality" value="03"></label>
     <label> 04<input type="radio" name="quality" value="04"></label>
