--- a/formularz.html
+++ b/formularz.html
@@ -21,14 +21,14 @@
 <form action="#" method="post">
     <h2><p align="center">JAK OCENIASZ NASZĄ RADIOSTACJĘ</h2></p>
 
-    <h3><>Oceń jakość muzyki w radio</h3>
+    <h3><p align="center">Oceń jakość muzyki w radio</h3></p>
     <label> 02<input type="radio" name="quality" value="02"></label>
     <label> 03<input type="radio" name="quality" value="03"></label>
     <label> 04<input type="radio" name="quality" value="04"></label>
     <label> 05<input type="radio" name="quality" value="05"></label>
     <label>Bardzo dobra</label>
 
-    <h3>Oceń różnorodność muzyki w radio</h3>
+    <h3><p align="center">Oceń różnorodność muzyki w radio</h3></p>
     <label>01<input type="radio" name="diversity" value="01"></label>
     <label>02<input type="radio" name="diversity" value="02"></label>
     <label>03<input type="radio" name="diversity" value="03"></label>
@@ -36,23 +36,23 @@
     <label>05<input type="radio" name="diversity" value="05"></label>
     <label>Monotonna</label>
 
-    <h3>Czy osoba prowadząca serwis informacyjny...</h3>
+    <h3><p align="center">Czy osoba prowadząca serwis informacyjny...</h3></p>
     <label>Bardzo rodnorodna<input type="radio" name="host_diversity" value="yes"></label>
     <label>Nie jest uprzejma<input type="radio" name="host_diversity" value="no"></label>
 
-    <h3>Jest uprzejma?</h3>
+    <h3><p align="center">Jest uprzejma?</h3></p>
     <label>Tak<input type="radio" name="polite" value="yes"></label>
     <label>Nie<input type="radio" name="polite" value="no"></label>
 
-    <h3>Podawała wiarygodne informacje?</h3>
+    <h3><p align="center">Podawała wiarygodne informacje?</h3></p>
     <label>Tak<input type="radio" name="reliable_info" value="yes"></label>
     <label>Nie<input type="radio" name="reliable_info" value="no"></label>
 
-    <h3>Mówiła wyraźnie?</h3>
+    <h3><p align="center">Mówiła wyraźnie?</h3></p>
     <label>Tak<input type="radio" name="clear_speech" value="yes"></label>
     <label>Nie<input type="radio" name="clear_speech" value="no"></label>
 
-    <h3>Ocenili reklamy w radio</h3>
+    <h3><p align="center">Ocenili reklamy w radio</h3></p>
     <label>Bardzo mało<input type="radio" name="ads_amount" value="01"></label>
     <label>02<input type="radio" name="ads_amount" value="02"></label>
     <label>03<input type="radio" name="ads_amount" value="03"></label>
@@ -60,7 +60,7 @@
     <label>05<input type="radio" name="ads_amount" value="05"></label>
     <label>Bardzo dużo</label>
 
-    <h3>Oceń jakość reklam</h3>
+    <h3><p align="center">Oceń jakość reklam</h3></p>
     <label>Bardzo za<input type="radio" name="ads_quality" value="01"></label>
     <label>02<input type="radio" name="ads_quality" value="02"></label>
     <label>01<input type="radio" name="ads_quality" value="03"></label>
@@ -68,7 +68,7 @@
     <label>05<input type="radio" name="ads_quality" value="05"></label>
     <label>Wyśmienita</label>
 
-    <h3>Czy poleciłbyś naszą radiostację swoim znajomym?</h3>
+    <h3><p align="center">Czy poleciłbyś naszą radiostację swoim znajomym?</h3></p>
     <label>Zdecydowanie nie<input type="radio" name="recommendation" value="01"></label>
     <label>02<input type="radio" name="recommendation" value="02"></label>
     <label>03<input type="radio" name="recommendation" value="03"></label>
@@ -76,7 +76,7 @@
     <label>05<input type="radio" name="recommendation" value="05"></label>
     <label>Zdecydowanie tak</label>
 
-    <h3>Oceń swoje ogólne wrażenia z naszą radiostacją</h3>
+    <h3<p align="center">>Oceń swoje ogólne wrażenia z naszą radiostacją</h3></p>
     <label>01<input type="radio" name="overall_experience" value="01"></label>
     <label>02<input type="radio" name="overall_experience" value="02"></label>
     <label>03<input type="radio" name="overall_experience" value="03"></label>
@@ -84,13 +84,13 @@
     <label>05<input type="radio" name="overall_experience" value="05"></label>
     <label>Bardzo złe</label>
 
-    <h3>Jak często słuchasz naszych audycji?</h3>
+    <h3><p align="center">Jak często słuchasz naszych audycji?</h3></p>
     <label>Raz na 2 tygodnie<input type="radio" name="listening_frequency" value="02"></label>
     <label>1-2 razy miesięcznie<input type="radio" name="listening_frequency" value="03"></label>
     <label>Raz na rok<input type="radio" name="listening_frequency" value="04"></label>
     <label>Rzadziej<input type="radio" name="listening_frequency" value="05"></label>
 
-    <h3>Ile osób zazwyczaj słuchasz naszych audycji?</h3>
+    <h3><p align="center">W Ile osób zazwyczaj słuchasz naszych audycji?</h3></p>
     <label>01<input type="radio" name="audience_size" value="01"></label>
     <label>02<input type="radio" name="audience_size" value="02"></label>
     <label>03<input type="radio" name="audience_size" value="03"></label>
