--- a/formularz.html
+++ b/formularz.html
@@ -21,52 +21,52 @@
 <form action="#" method="post">
     <h2><p align="center">JAK OCENIASZ NASZĄ RADIOSTACJĘ</h2></p>
 
-    <h3><p align="center">Oceń jakość muzyki w radio</h3></p>
+    <h3><p align="center">Oceń jakość muzyki w radio</h3>
     <label> 02<input type="radio" name="quality" value="02"></label>
     <label> 03<input type="radio" name="quality" value="03"></label>
     <label> 04<input type="radio" name="quality" value="04"></label>
     <label> 05<input type="radio" name="quality" value="05"></label>
-    <label>Bardzo dobra</label>
+    <label>Bardzo dobra</label></p>
 
-    <h3><p align="center">Oceń różnorodność muzyki w radio</h3></p>
+    <h3><p align="center">Oceń różnorodność muzyki w radio</h3>
     <label>01<input type="radio" name="diversity" value="01"></label>
     <label>02<input type="radio" name="diversity" value="02"></label>
     <label>03<input type="radio" name="diversity" value="03"></label>
     <label>04<input type="radio" name="diversity" value="04"></label>
     <label>05<input type="radio" name="diversity" value="05"></label>
-    <label>Monotonna</label>
+    <label>Monotonna</label></p>
 
-    <h3><p align="center">Czy osoba prowadząca serwis informacyjny...</h3></p>
+    <h3><p align="center">Czy osoba prowadząca serwis informacyjny...</h3>
     <label>Bardzo rodnorodna<input type="radio" name="host_diversity" value="yes"></label>
-    <label>Nie jest uprzejma<input type="radio" name="host_diversity" value="no"></label>
+    <label>Nie jest uprzejma<input type="radio" name="host_diversity" value="no"></label></p>
 
-    <h3><p align="center">Jest uprzejma?</h3></p>
+    <h3><p align="center">Jest uprzejma?</h3>
     <label>Tak<input type="radio" name="polite" value="yes"></label>
-    <label>Nie<input type="radio" name="polite" value="no"></label>
+    <label>Nie<input type="radio" name="polite" value="no"></label></p>
 
-    <h3><p align="center">Podawała wiarygodne informacje?</h3></p>
+    <h3><p align="center">Podawała wiarygodne informacje?</h3>
     <label>Tak<input type="radio" name="reliable_info" value="yes"></label>
-    <label>Nie<input type="radio" name="reliable_info" value="no"></label>
+    <label>Nie<input type="radio" name="reliable_info" value="no"></label></p>
 
-    <h3><p align="center">Mówiła wyraźnie?</h3></p>
+    <h3><p align="center">Mówiła wyraźnie?</h3>
     <label>Tak<input type="radio" name="clear_speech" value="yes"></label>
-    <label>Nie<input type="radio" name="clear_speech" value="no"></label>
+    <label>Nie<input type="radio" name="clear_speech" value="no"></label></p>
 
-    <h3><p align="center">Ocenili reklamy w radio</h3></p>
+    <h3><p align="center">Ocenili reklamy w radio</h3>
     <label>Bardzo mało<input type="radio" name="ads_amount" value="01"></label>
     <label>02<input type="radio" name="ads_amount" value="02"></label>
     <label>03<input type="radio" name="ads_amount" value="03"></label>
     <label>04<input type="radio" name="ads_amount" value="04"></label>
     <label>05<input type="radio" name="ads_amount" value="05"></label>
-    <label>Bardzo dużo</label>
+    <label>Bardzo dużo</label></p>
 
-    <h3><p align="center">Oceń jakość reklam</h3></p>
+    <h3><p align="center">Oceń jakość reklam</h3>
     <label>Bardzo za<input type="radio" name="ads_quality" value="01"></label>
     <label>02<input type="radio" name="ads_quality" value="02"></label>
     <label>01<input type="radio" name="ads_quality" value="03"></label>
     <label>04<input type="radio" name="ads_quality" value="04"></label>
     <label>05<input type="radio" name="ads_quality" value="05"></label>
-    <label>Wyśmienita</label>
+    <label>Wyśmienita</label></p>
 
     <h3><p align="center">Czy poleciłbyś naszą radiostację swoim znajomym?</h3></p>
     <label>Zdecydowanie nie<input type="radio" name="recommendation" value="01"></label>
