--- a/formularz.html
+++ b/formularz.html
@@ -69,7 +69,8 @@
     <label>Wyśmienita</label></p>
 
     <h3><p align="center">Czy poleciłbyś naszą radiostację swoim znajomym?</h3></p>
-    <label>Zdecydowanie nie<input type="radio" name="recommendation" value="01"></label>
+    <label>Zdecydowanie nie</label>
+    <label>01<input type="radio" name="recommendation" value="01"></label>
     <label>02<input type="radio" name="recommendation" value="02"></label>
     <label>03<input type="radio" name="recommendation" value="03"></label>
     <label>04<input type="radio" name="recommendation" value="04"></label>
