--- a/formularz.html
+++ b/formularz.html
@@ -22,10 +22,12 @@
     <h2><p align="center">JAK OCENIASZ NASZĄ RADIOSTACJĘ</h2></p>
 
     <h3><p align="center">Oceń jakość muzyki w radio</h3>
-    <label> 02<input type="radio" name="quality" value="02"></label>
-    <label> 03<input type="radio" name="quality" value="03"></label>
-    <label> 04<input type="radio" name="quality" value="04"></label>
-    <label> 05<input type="radio" name="quality" value="05"></label>
+    <label>Brdzo słaba</label>
+    <label><p> 01<input type="radio" name="quality" value="01"></label></p>
+    <label><p> 02<input type="radio" name="quality" value="02"></label></p>
+    <label><p> 03<input type="radio" name="quality" value="03"></label></p>
+    <label><p></p> 04<input type="radio" name="quality" value="04"></label></p>
+    <label><p> 05<input type="radio" name="quality" value="05"></label></p>
     <label>Bardzo dobra</label></p>
 
     <h3><p align="center">Oceń różnorodność muzyki w radio</h3>
