--- a/formularz.html
+++ b/formularz.html
@@ -31,28 +31,19 @@
     <label>Bardzo dobra</label></p>
 
     <h3><p align="center">Oceń różnorodność muzyki w radio</h3>
+    <label>Monotonna</label>
     <label>01<input type="radio" name="diversity" value="01"></label>
     <label>02<input type="radio" name="diversity" value="02"></label>
     <label>03<input type="radio" name="diversity" value="03"></label>
     <label>04<input type="radio" name="diversity" value="04"></label>
     <label>05<input type="radio" name="diversity" value="05"></label>
-    <label>Monotonna</label></p>
+    <label>Bardzo zróżnicowana</label></p>
 
     <h3><p align="center">Czy osoba prowadząca serwis informacyjny...</h3>
-    <label>Bardzo rodnorodna<input type="radio" name="host_diversity" value="yes"></label>
-    <label>Nie jest uprzejma<input type="radio" name="host_diversity" value="no"></label></p>
+    <label>Jest uprzejam ? <input type="radio" name="host_diversity" value="yes"></label>
+    <label>Podawała wiarygodne informacje ?<input type="radio" name="host_diversity" value="no"></label>
+    <label>Mówiła wyraźnie ?<input type="radio" name="host_diversity" value="no"></label>
 
-    <h3><p align="center">Jest uprzejma?</h3>
-    <label>Tak<input type="radio" name="polite" value="yes"></label>
-    <label>Nie<input type="radio" name="polite" value="no"></label></p>
-
-    <h3><p align="center">Podawała wiarygodne informacje?</h3>
-    <label>Tak<input type="radio" name="reliable_info" value="yes"></label>
-    <label>Nie<input type="radio" name="reliable_info" value="no"></label></p>
-
-    <h3><p align="center">Mówiła wyraźnie?</h3>
-    <label>Tak<input type="radio" name="clear_speech" value="yes"></label>
-    <label>Nie<input type="radio" name="clear_speech" value="no"></label></p>
 
     <h3><p align="center">Ocenili reklamy w radio</h3>
     <label>Bardzo mało<input type="radio" name="ads_amount" value="01"></label>
