--- a/formularz.html
+++ b/formularz.html
@@ -54,7 +54,8 @@
     <label>Bardzo dużo</label></p>
 
     <h3><p align="center">Oceń jakość reklam</h3>
-    <label>Bardzo za<input type="radio" name="ads_quality" value="01"></label>
+    <label>Bardzo za</label>    
+    <label>01<input type="radio" name="ads_quality" value="01"></label>
     <label>02<input type="radio" name="ads_quality" value="02"></label>
     <label>01<input type="radio" name="ads_quality" value="03"></label>
     <label>04<input type="radio" name="ads_quality" value="04"></label>
