--- a/formularz.html
+++ b/formularz.html
@@ -46,7 +46,8 @@
 
 
     <h3><p align="center">Ocenili reklamy w radio</h3>
-    <label>Bardzo mało<input type="radio" name="ads_amount" value="01"></label>
+    <label>Bardzo mało</label>
+    <label>01<input type="radio" name="ads_amount" value="01"></label>
     <label>02<input type="radio" name="ads_amount" value="02"></label>
     <label>03<input type="radio" name="ads_amount" value="03"></label>
     <label>04<input type="radio" name="ads_amount" value="04"></label>
