--- a/formularz.html
+++ b/formularz.html
@@ -73,6 +73,7 @@
     <label>Zdecydowanie tak</label>
 
     <h3><p align="center">Oceń swoje ogólne wrażenia z naszą radiostacją</h3></p>
+    <label>Bardzo pozytywne</label>
     <label>01<input type="radio" name="overall_experience" value="01"></label>
     <label>02<input type="radio" name="overall_experience" value="02"></label>
     <label>03<input type="radio" name="overall_experience" value="03"></label>
