--- a/formularz.html
+++ b/formularz.html
@@ -40,7 +40,7 @@
     <label>Bardzo zróżnicowana</label></p>
 
     <h3><p align="center">Czy osoba prowadząca serwis informacyjny...</h3>
-    <label>Jest uprzejam ? <input type="radio" name="host_diversity" value="yes"></label>
+    <label>Jest uprzejam ? tak |<input type="radio" name="host_diversity" value="yes"> nie <input type="radio" name="host_diversity" value="nie"></label>
     <label>Podawała wiarygodne informacje ?<input type="radio" name="host_diversity" value="no"></label>
     <label>Mówiła wyraźnie ?<input type="radio" name="host_diversity" value="no"></label>
 
