--- a/formularz.html
+++ b/formularz.html
@@ -41,8 +41,8 @@
 
     <h3><p align="center">Czy osoba prowadząca serwis informacyjny...</h3>
     <label>Jest uprzejam ? tak |<input type="radio" name="host_diversity" value="yes"> nie <input type="radio" name="host_diversity" value="nie"></label>
-    <label>Podawała wiarygodne informacje ?<input type="radio" name="host_diversity" value="no"></label>
-    <label>Mówiła wyraźnie ?<input type="radio" name="host_diversity" value="no"></label>
+    <label>Podawała wiarygodne informacje ? tak |<input type="radio" name="host_diversity" value="yes"> nie <input type="radio" name="host_diversity" value="nie"></label>
+    <label>Mówiła wyraźnie ? tak |<input type="radio" name="host_diversity" value="yes"> nie <input type="radio" name="host_diversity" value="nie"></label>
 
 
     <h3><p align="center">Ocenili reklamy w radio</h3>
