--- a/plik.html
+++ b/plik.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title> plik Borkowski</title>
+<title> plik Grabarczyk</title>
 </head>
 <body>
 <A href ="plik.zip">p&nbsp;o&nbsp;b&nbsp;i&nbsp;e&nbsp;r&nbsp;z&nbsp; aby pobrać</A><br>
